--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "type": "git",
     "url": "https://github.com/Torann/laravel-elixir-fingerprint"
   },
-  "author": "Daniel Stainback",
+  "author": {
+    "name": "Daniel Stainback"
+  },
   "license": "MIT",
   "homepage": "https://github.com/Torann/laravel-elixir-fingerprint",
   "bugs": {
@@ -26,5 +28,26 @@
   },
   "dependencies": {
     "gulp-fingerprint": "^0.3.2"
-  }
+  },
+  "_id": "laravel-elixir-fingerprint@0.3.2",
+  "_shasum": "8af9a2567f163a75c3525df6d7b992d9f4165873",
+  "_from": "laravel-elixir-fingerprint@",
+  "_npmVersion": "1.4.9",
+  "_npmUser": {
+    "name": "torann",
+    "email": "torann@gmail.com"
+  },
+  "maintainers": [
+    {
+      "name": "torann",
+      "email": "torann@gmail.com"
+    }
+  ],
+  "dist": {
+    "shasum": "8af9a2567f163a75c3525df6d7b992d9f4165873",
+    "tarball": "http://registry.npmjs.org/laravel-elixir-fingerprint/-/laravel-elixir-fingerprint-0.3.2.tgz"
+  },
+  "directories": {},
+  "_resolved": "https://registry.npmjs.org/laravel-elixir-fingerprint/-/laravel-elixir-fingerprint-0.3.2.tgz",
+  "readme": "ERROR: No README data found!"
 }
